[gd_scene load_steps=125 format=3 uid="uid://c6oqjff5145ye"]

[ext_resource type="Script" path="res://assets/scripts/interactivo.gd" id="1_i8l7m"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCClient.gd" id="1_p7f0e"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCMessage.gd" id="2_skh3d"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCServer.gd" id="3_nskoe"]
[ext_resource type="Script" path="res://assets/scripts/osc_receiver.gd" id="5_v4t0v"]
[ext_resource type="Texture2D" uid="uid://lnqw3r2tlncd" path="res://img/inicio/default/inicio_1.png" id="6_ojike"]
[ext_resource type="Texture2D" uid="uid://bp4y48jl5ndb5" path="res://img/inicio/llamada_1/atendiendo_linea_1_00.png" id="6_re0lj"]
[ext_resource type="Texture2D" uid="uid://7e678fy8xed3" path="res://img/inicio/llamada_1/atendiendo_linea_1_01.png" id="7_8sepw"]
[ext_resource type="Texture2D" uid="uid://b2tv0e0n1ut3h" path="res://img/inicio/default/inicio_2.png" id="7_ndwi0"]
[ext_resource type="Texture2D" uid="uid://cna6timeub6e8" path="res://img/inicio/llamada_1/atendiendo_linea_1_02.png" id="8_6b426"]
[ext_resource type="Texture2D" uid="uid://b5ysfbaauxx0" path="res://img/inicio/default/inicio_3.png" id="8_dfycp"]
[ext_resource type="Texture2D" uid="uid://cd624uas54b47" path="res://img/inicio/default/inicio_4.png" id="9_4h82p"]
[ext_resource type="Texture2D" uid="uid://dge6vsv6vvmgq" path="res://img/inicio/llamada_1/atendiendo_linea_1_03.png" id="9_p164q"]
[ext_resource type="Texture2D" uid="uid://di1dyp6k5j4qk" path="res://img/inicio/default/inicio_5.png" id="10_agu4p"]
[ext_resource type="Texture2D" uid="uid://i7si5cki80p5" path="res://img/inicio/llamada_2/atendiendo_linea_2_00.png" id="10_www7o"]
[ext_resource type="Texture2D" uid="uid://cp2qt23c6a3fr" path="res://img/inicio/default/inicio_6.png" id="11_cjb76"]
[ext_resource type="Texture2D" uid="uid://3u53u1h23x0p" path="res://img/inicio/llamada_2/atendiendo_linea_2_01.png" id="11_rk0yk"]
[ext_resource type="Texture2D" uid="uid://q7drqnsjwr0x" path="res://img/inicio/default/inicio_7.png" id="12_1atkd"]
[ext_resource type="Texture2D" uid="uid://cwcum8dqp1ykr" path="res://img/inicio/llamada_2/atendiendo_linea_2_02.png" id="12_21a6h"]
[ext_resource type="Texture2D" uid="uid://urnja8smfwox" path="res://img/inicio/llamada_2/atendiendo_linea_2_03.png" id="13_g0rxd"]
[ext_resource type="Texture2D" uid="uid://ckyu43hlusdu" path="res://img/inicio/default/inicio_8.png" id="13_oqumn"]
[ext_resource type="Texture2D" uid="uid://bjlvprdam6jvq" path="res://img/inicio/default/inicio_9.png" id="14_72ghu"]
[ext_resource type="Texture2D" uid="uid://bhwx02rarnxlk" path="res://img/inicio/llamada_3/atendiendo_linea_3_00.png" id="14_nj23e"]
[ext_resource type="Texture2D" uid="uid://crvq168la416n" path="res://img/inicio/default/inicio_10.png" id="15_4vtvc"]
[ext_resource type="Texture2D" uid="uid://hjcw1cw7nh8t" path="res://img/inicio/llamada_3/atendiendo_linea_3_01.png" id="15_iqcyn"]
[ext_resource type="Texture2D" uid="uid://beyk2vg6j8j0e" path="res://img/inicio/llamada_3/atendiendo_linea_3_02.png" id="16_8wxfs"]
[ext_resource type="Texture2D" uid="uid://brbuj0aotb2pc" path="res://img/inicio/default/inicio_11.png" id="16_tk7gp"]
[ext_resource type="Texture2D" uid="uid://voj3v8ssav8g" path="res://img/inicio/default/inicio_12.png" id="17_8ifyw"]
[ext_resource type="Texture2D" uid="uid://cgowtc6mf12pb" path="res://img/inicio/llamada_3/atendiendo_linea_3_03.png" id="17_n5fvj"]
[ext_resource type="Texture2D" uid="uid://wvvyd60lcmv8" path="res://img/inicio/llamada_4/atendiendo_linea_4_00.png" id="18_n6hmc"]
[ext_resource type="Texture2D" uid="uid://ecs8bexe1gky" path="res://img/inicio/default/inicio_13.png" id="18_vq028"]
[ext_resource type="Texture2D" uid="uid://bjjtpijwphjjb" path="res://img/inicio/llamada_4/atendiendo_linea_4_01.png" id="19_o4jk7"]
[ext_resource type="Texture2D" uid="uid://c1m34gnmy0n5m" path="res://img/inicio/default/inicio_14.png" id="19_td6ep"]
[ext_resource type="Texture2D" uid="uid://bhw865vvsw0fr" path="res://img/inicio/llamada_4/atendiendo_linea_4_02.png" id="20_bu401"]
[ext_resource type="Texture2D" uid="uid://5kwt6m8xwf1d" path="res://img/inicio/default/inicio_15.png" id="20_rgmu4"]
[ext_resource type="Texture2D" uid="uid://c12ge1oun4w10" path="res://img/inicio/llamada_4/atendiendo_linea_4_03.png" id="21_vsd0k"]
[ext_resource type="Texture2D" uid="uid://b1quws0leqn45" path="res://img/inicio/default/inicio_16.png" id="21_yapea"]
[ext_resource type="Texture2D" uid="uid://b5yepud0pu1qj" path="res://img/inicio/llamada_5/atendiendo_linea_5_00.png" id="22_teu4j"]
[ext_resource type="Texture2D" uid="uid://ddsklxm48hvw7" path="res://img/inicio/default/inicio_17.png" id="22_wjhox"]
[ext_resource type="Texture2D" uid="uid://fxkvwopicraw" path="res://img/inicio/default/inicio_18.png" id="23_sq15k"]
[ext_resource type="Texture2D" uid="uid://dfytlhq53cxhx" path="res://img/inicio/llamada_5/atendiendo_linea_5_01.png" id="23_vom7u"]
[ext_resource type="Texture2D" uid="uid://dih4d7dldqs5i" path="res://img/inicio/default/inicio_19.png" id="24_b4ipq"]
[ext_resource type="Texture2D" uid="uid://dtxuckjdc01j8" path="res://img/inicio/llamada_5/atendiendo_linea_5_02.png" id="24_d0b3e"]
[ext_resource type="Texture2D" uid="uid://d0vvqu8hvnu3m" path="res://img/inicio/default/inicio_20.png" id="25_gc2c6"]
[ext_resource type="Texture2D" uid="uid://clnbnukgw65ie" path="res://img/inicio/llamada_5/atendiendo_linea_5_03.png" id="25_p0xya"]
[ext_resource type="Texture2D" uid="uid://3ajsp76qxey8" path="res://img/inicio/default/inicio_21.png" id="26_aamtq"]
[ext_resource type="Texture2D" uid="uid://cyw7km3xpqnbg" path="res://img/inicio/default/inicio_22.png" id="27_bcfdw"]
[ext_resource type="Texture2D" uid="uid://dauspu217ay1h" path="res://img/inicio/default/inicio_23.png" id="28_bd5qx"]
[ext_resource type="Texture2D" uid="uid://cs6ul8lw6ienw" path="res://img/inicio/default/inicio_24.png" id="29_tnjj5"]
[ext_resource type="Texture2D" uid="uid://d0chfoyto6jhb" path="res://img/inicio/default/inicio_25.png" id="30_2b42v"]
[ext_resource type="Texture2D" uid="uid://so8dqnevsq3i" path="res://img/inicio/default/inicio_26.png" id="31_jyaf1"]
[ext_resource type="Texture2D" uid="uid://c1p701wyo7g4f" path="res://img/inicio/default/inicio_27.png" id="32_lyvwm"]
[ext_resource type="Texture2D" uid="uid://0i35qx1wpvor" path="res://img/inicio/default/inicio_28.png" id="33_tlo6h"]
[ext_resource type="Texture2D" uid="uid://4s1y7tjql7wa" path="res://img/inicio/default/inicio_29.png" id="34_pdwp8"]
[ext_resource type="Texture2D" uid="uid://2103406u07uj" path="res://img/inicio/default/inicio_30.png" id="35_6taam"]
[ext_resource type="Texture2D" uid="uid://bop2kqk23hu07" path="res://img/inicio/default/inicio_31.png" id="36_vm4f7"]
[ext_resource type="Texture2D" uid="uid://bvfuw83lytr5g" path="res://img/inicio/default/inicio_32.png" id="37_i4v0t"]
[ext_resource type="Texture2D" uid="uid://c6skrdbscm8ej" path="res://img/inicio/default/inicio_33.png" id="38_j3d8h"]
[ext_resource type="Texture2D" uid="uid://b3pipda12i3t6" path="res://img/inicio/default/inicio_34.png" id="39_48tjo"]
[ext_resource type="Texture2D" uid="uid://26oq16neqbg6" path="res://img/inicio/default/inicio_35.png" id="40_olakm"]
[ext_resource type="Texture2D" uid="uid://d2kwub3i4x1ed" path="res://img/inicio/default/inicio_36.png" id="41_5ytxc"]
[ext_resource type="Texture2D" uid="uid://bguhtxip52l3f" path="res://img/inicio/default/inicio_37.png" id="42_nhl64"]
[ext_resource type="Texture2D" uid="uid://cx14b7jwcq5iy" path="res://img/inicio/default/inicio_38.png" id="43_0ip5u"]
[ext_resource type="Texture2D" uid="uid://ccyxpt75tf73r" path="res://img/inicio/default/inicio_39.png" id="44_3ax4c"]
[ext_resource type="Texture2D" uid="uid://bm6dqo2pb1lve" path="res://img/inicio/default/inicio_40.png" id="45_nftsp"]
[ext_resource type="Texture2D" uid="uid://cvjsjj62feyhi" path="res://img/inicio/default/inicio_41.png" id="46_x45kc"]
[ext_resource type="Texture2D" uid="uid://d4c2eukbtu3u0" path="res://img/inicio/default/inicio_42.png" id="47_vsugg"]
[ext_resource type="Texture2D" uid="uid://16uxe7r8ynxd" path="res://img/inicio/default/inicio_43.png" id="48_8x84n"]
[ext_resource type="Texture2D" uid="uid://dtyk7idec2203" path="res://img/inicio/default/inicio_44.png" id="49_ccm04"]
[ext_resource type="Texture2D" uid="uid://d21nvqjbogxwy" path="res://img/inicio/default/inicio_45.png" id="50_dxh5c"]
[ext_resource type="Texture2D" uid="uid://bbg2dl7j721go" path="res://img/inicio/default/inicio_46.png" id="51_psolu"]
[ext_resource type="Texture2D" uid="uid://cs8v4gok6nlix" path="res://img/inicio/default/inicio_47.png" id="52_qc5ua"]
[ext_resource type="Texture2D" uid="uid://cu6n5ku6qq2ol" path="res://img/inicio/default/inicio_48.png" id="53_psyfm"]
[ext_resource type="Texture2D" uid="uid://b76k3um8na07i" path="res://img/inicio/default/inicio_49.png" id="54_w3un5"]
[ext_resource type="Texture2D" uid="uid://ccossgh5cnoqt" path="res://img/inicio/default/inicio_50.png" id="55_7q8ol"]
[ext_resource type="Texture2D" uid="uid://jx6g4vk0m0c5" path="res://img/inicio/default/inicio_51.png" id="56_o4vl8"]
[ext_resource type="Texture2D" uid="uid://601mg2kucxhv" path="res://img/inicio/default/inicio_52.png" id="57_7cwav"]
[ext_resource type="Texture2D" uid="uid://coi3rhutofdl4" path="res://img/inicio/default/inicio_53.png" id="58_vxkcn"]
[ext_resource type="Texture2D" uid="uid://b6nr7j3i7ypvu" path="res://img/inicio/default/inicio_54.png" id="59_gwjm6"]
[ext_resource type="Texture2D" uid="uid://byj2adofa45kf" path="res://img/inicio/default/inicio_55.png" id="60_to1ku"]
[ext_resource type="Texture2D" uid="uid://cykj2wbaxvc16" path="res://img/inicio/default/inicio_56.png" id="61_nch6f"]
[ext_resource type="Texture2D" uid="uid://ba0qp0dajo0v8" path="res://img/inicio/default/inicio_57.png" id="62_8rrss"]
[ext_resource type="Texture2D" uid="uid://cygckf0pfbq80" path="res://img/inicio/default/inicio_58.png" id="63_6lx8v"]
[ext_resource type="Texture2D" uid="uid://qsy6a6htlci" path="res://img/inicio/default/inicio_59.png" id="64_kxflw"]
[ext_resource type="Texture2D" uid="uid://cd4llk6yovu53" path="res://img/inicio/default/inicio_60.png" id="65_2ap2p"]
[ext_resource type="Texture2D" uid="uid://dcp8kuqodkbua" path="res://img/inicio/default/inicio_61.png" id="66_bsty4"]
[ext_resource type="Texture2D" uid="uid://becmndwq4fn2v" path="res://img/inicio/default/inicio_62.png" id="67_y2vwr"]
[ext_resource type="Texture2D" uid="uid://di3sj1dp4bmsa" path="res://img/inicio/default/inicio_63.png" id="68_od4dx"]
[ext_resource type="Texture2D" uid="uid://bunhlcj7xa430" path="res://img/inicio/default/inicio_64.png" id="69_c6mbp"]
[ext_resource type="Texture2D" uid="uid://c5meu8u66luow" path="res://img/inicio/default/inicio_65.png" id="70_jjb1r"]
[ext_resource type="Texture2D" uid="uid://dbgw43uw885kq" path="res://img/inicio/default/inicio_66.png" id="71_4gnq8"]
[ext_resource type="Texture2D" uid="uid://ba414e0baxvo0" path="res://img/inicio/default/inicio_67.png" id="72_si2mg"]
[ext_resource type="Texture2D" uid="uid://d37g08pqth6b0" path="res://img/inicio/default/inicio_68.png" id="73_yc307"]
[ext_resource type="Texture2D" uid="uid://cpokdtfahmrt" path="res://img/inicio/default/inicio_69.png" id="74_3doce"]
[ext_resource type="Texture2D" uid="uid://bpg4q82towjmb" path="res://img/inicio/default/inicio_70.png" id="75_x51j6"]
[ext_resource type="Texture2D" uid="uid://bpt00aj642gb1" path="res://img/inicio/default/inicio_71.png" id="76_fj453"]
[ext_resource type="Texture2D" uid="uid://cnd1idtk1s5u2" path="res://img/inicio/default/inicio_72.png" id="77_a0vrp"]
[ext_resource type="Texture2D" uid="uid://d2vhyxpcmxwmg" path="res://img/inicio/default/inicio_73.png" id="78_nugdh"]
[ext_resource type="Texture2D" uid="uid://c4qagqc8eal5k" path="res://img/inicio/default/inicio_74.png" id="79_6ftrx"]
[ext_resource type="Texture2D" uid="uid://dvuk72pewi477" path="res://img/inicio/default/inicio_75.png" id="80_43xdl"]
[ext_resource type="Texture2D" uid="uid://xbhbngqmvs07" path="res://img/inicio/default/inicio_76.png" id="81_ehyn3"]
[ext_resource type="Texture2D" uid="uid://e4621om8ixed" path="res://img/inicio/default/inicio_77.png" id="82_jihsv"]
[ext_resource type="Texture2D" uid="uid://bt88wyyst3rxu" path="res://img/inicio/default/inicio_78.png" id="83_tqjrx"]
[ext_resource type="Texture2D" uid="uid://bdgm6judm8cvm" path="res://img/inicio/default/inicio_79.png" id="84_pbt5i"]
[ext_resource type="Texture2D" uid="uid://bap0qfe7k85wy" path="res://img/inicio/default/inicio_80.png" id="85_t0rhx"]
[ext_resource type="Texture2D" uid="uid://ddyuh52jc36tn" path="res://img/inicio/default/inicio_81.png" id="86_iji7a"]
[ext_resource type="Texture2D" uid="uid://ce4meyagbp0ll" path="res://img/inicio/default/inicio_82.png" id="87_j2634"]
[ext_resource type="Texture2D" uid="uid://biay7bc0gnuuq" path="res://img/inicio/default/inicio_83.png" id="88_tdffa"]
[ext_resource type="Texture2D" uid="uid://ctfepho6g7ial" path="res://img/inicio/default/inicio_84.png" id="89_okk11"]
[ext_resource type="Texture2D" uid="uid://dh3amlefoi1ok" path="res://img/inicio/default/inicio_85.png" id="90_cwfet"]
[ext_resource type="Texture2D" uid="uid://ccotc5thnk0ci" path="res://img/inicio/default/inicio_86.png" id="91_ugvuw"]
[ext_resource type="Texture2D" uid="uid://dws5wsi1fidm7" path="res://img/inicio/default/inicio_87.png" id="92_22ru4"]
[ext_resource type="Texture2D" uid="uid://bi6tot3fkd6bh" path="res://img/inicio/default/inicio_88.png" id="93_q6p06"]
[ext_resource type="Texture2D" uid="uid://cv68tei38y7nc" path="res://img/inicio/default/inicio_89.png" id="94_f31l2"]
[ext_resource type="Texture2D" uid="uid://dn2ck68xufsyu" path="res://img/inicio/default/inicio_90.png" id="95_7kulq"]
[ext_resource type="Texture2D" uid="uid://cx870roy33ta5" path="res://img/inicio/default/inicio_91.png" id="96_weiei"]
[ext_resource type="Texture2D" uid="uid://db8ta6jtn21ol" path="res://img/inicio/default/inicio_92.png" id="97_8xga3"]
[ext_resource type="Texture2D" uid="uid://ddmga1rw0g2w1" path="res://img/inicio/default/inicio_93.png" id="98_gxh24"]
[ext_resource type="Texture2D" uid="uid://bkg5hi50gx0xj" path="res://img/inicio/default/inicio_94.png" id="99_islmt"]
[ext_resource type="Texture2D" uid="uid://c5b4y60xamb7w" path="res://img/inicio/default/inicio_95.png" id="100_avqfu"]
[ext_resource type="Texture2D" uid="uid://cm21r0hrdcoh4" path="res://img/inicio/default/inicio_96.png" id="101_tvwsq"]
[ext_resource type="Texture2D" uid="uid://cok8gduqf8tp" path="res://img/inicio/background/background_inicio.png" id="102_uqcgj"]
[ext_resource type="PackedScene" uid="uid://bmijw1xk13sif" path="res://scenes/encuesta.tscn" id="123_ghvbq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ppgan"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_re0lj")
}, {
"duration": 1.0,
"texture": ExtResource("7_8sepw")
}, {
"duration": 1.0,
"texture": ExtResource("8_6b426")
}, {
"duration": 1.0,
"texture": ExtResource("9_p164q")
}],
"loop": true,
"name": &"Llamada1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_www7o")
}, {
"duration": 1.0,
"texture": ExtResource("11_rk0yk")
}, {
"duration": 1.0,
"texture": ExtResource("12_21a6h")
}, {
"duration": 1.0,
"texture": ExtResource("13_g0rxd")
}],
"loop": true,
"name": &"Llamada2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_nj23e")
}, {
"duration": 1.0,
"texture": ExtResource("15_iqcyn")
}, {
"duration": 1.0,
"texture": ExtResource("16_8wxfs")
}, {
"duration": 1.0,
"texture": ExtResource("17_n5fvj")
}],
"loop": true,
"name": &"Llamada3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_n6hmc")
}, {
"duration": 1.0,
"texture": ExtResource("19_o4jk7")
}, {
"duration": 1.0,
"texture": ExtResource("20_bu401")
}, {
"duration": 1.0,
"texture": ExtResource("21_vsd0k")
}],
"loop": true,
"name": &"Llamada4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_teu4j")
}, {
"duration": 1.0,
"texture": ExtResource("23_vom7u")
}, {
"duration": 1.0,
"texture": ExtResource("24_d0b3e")
}, {
"duration": 1.0,
"texture": ExtResource("25_p0xya")
}],
"loop": true,
"name": &"Llamada5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ojike")
}, {
"duration": 1.0,
"texture": ExtResource("7_ndwi0")
}, {
"duration": 1.0,
"texture": ExtResource("8_dfycp")
}, {
"duration": 1.0,
"texture": ExtResource("9_4h82p")
}, {
"duration": 1.0,
"texture": ExtResource("10_agu4p")
}, {
"duration": 1.0,
"texture": ExtResource("11_cjb76")
}, {
"duration": 1.0,
"texture": ExtResource("12_1atkd")
}, {
"duration": 1.0,
"texture": ExtResource("13_oqumn")
}, {
"duration": 1.0,
"texture": ExtResource("14_72ghu")
}, {
"duration": 1.0,
"texture": ExtResource("15_4vtvc")
}, {
"duration": 1.0,
"texture": ExtResource("16_tk7gp")
}, {
"duration": 1.0,
"texture": ExtResource("17_8ifyw")
}, {
"duration": 1.0,
"texture": ExtResource("18_vq028")
}, {
"duration": 1.0,
"texture": ExtResource("19_td6ep")
}, {
"duration": 1.0,
"texture": ExtResource("20_rgmu4")
}, {
"duration": 1.0,
"texture": ExtResource("21_yapea")
}, {
"duration": 1.0,
"texture": ExtResource("22_wjhox")
}, {
"duration": 1.0,
"texture": ExtResource("23_sq15k")
}, {
"duration": 1.0,
"texture": ExtResource("24_b4ipq")
}, {
"duration": 1.0,
"texture": ExtResource("25_gc2c6")
}, {
"duration": 1.0,
"texture": ExtResource("26_aamtq")
}, {
"duration": 1.0,
"texture": ExtResource("27_bcfdw")
}, {
"duration": 1.0,
"texture": ExtResource("28_bd5qx")
}, {
"duration": 1.0,
"texture": ExtResource("29_tnjj5")
}, {
"duration": 1.0,
"texture": ExtResource("30_2b42v")
}, {
"duration": 1.0,
"texture": ExtResource("31_jyaf1")
}, {
"duration": 1.0,
"texture": ExtResource("32_lyvwm")
}, {
"duration": 1.0,
"texture": ExtResource("33_tlo6h")
}, {
"duration": 1.0,
"texture": ExtResource("34_pdwp8")
}, {
"duration": 1.0,
"texture": ExtResource("35_6taam")
}, {
"duration": 1.0,
"texture": ExtResource("36_vm4f7")
}, {
"duration": 1.0,
"texture": ExtResource("37_i4v0t")
}, {
"duration": 1.0,
"texture": ExtResource("38_j3d8h")
}, {
"duration": 1.0,
"texture": ExtResource("39_48tjo")
}, {
"duration": 1.0,
"texture": ExtResource("40_olakm")
}, {
"duration": 1.0,
"texture": ExtResource("41_5ytxc")
}, {
"duration": 1.0,
"texture": ExtResource("42_nhl64")
}, {
"duration": 1.0,
"texture": ExtResource("43_0ip5u")
}, {
"duration": 1.0,
"texture": ExtResource("44_3ax4c")
}, {
"duration": 1.0,
"texture": ExtResource("45_nftsp")
}, {
"duration": 1.0,
"texture": ExtResource("46_x45kc")
}, {
"duration": 1.0,
"texture": ExtResource("47_vsugg")
}, {
"duration": 1.0,
"texture": ExtResource("48_8x84n")
}, {
"duration": 1.0,
"texture": ExtResource("49_ccm04")
}, {
"duration": 1.0,
"texture": ExtResource("50_dxh5c")
}, {
"duration": 1.0,
"texture": ExtResource("51_psolu")
}, {
"duration": 1.0,
"texture": ExtResource("52_qc5ua")
}, {
"duration": 1.0,
"texture": ExtResource("53_psyfm")
}, {
"duration": 1.0,
"texture": ExtResource("54_w3un5")
}, {
"duration": 1.0,
"texture": ExtResource("55_7q8ol")
}, {
"duration": 1.0,
"texture": ExtResource("56_o4vl8")
}, {
"duration": 1.0,
"texture": ExtResource("57_7cwav")
}, {
"duration": 1.0,
"texture": ExtResource("58_vxkcn")
}, {
"duration": 1.0,
"texture": ExtResource("59_gwjm6")
}, {
"duration": 1.0,
"texture": ExtResource("60_to1ku")
}, {
"duration": 1.0,
"texture": ExtResource("61_nch6f")
}, {
"duration": 1.0,
"texture": ExtResource("62_8rrss")
}, {
"duration": 1.0,
"texture": ExtResource("63_6lx8v")
}, {
"duration": 1.0,
"texture": ExtResource("64_kxflw")
}, {
"duration": 1.0,
"texture": ExtResource("65_2ap2p")
}, {
"duration": 1.0,
"texture": ExtResource("66_bsty4")
}, {
"duration": 1.0,
"texture": ExtResource("67_y2vwr")
}, {
"duration": 1.0,
"texture": ExtResource("68_od4dx")
}, {
"duration": 1.0,
"texture": ExtResource("69_c6mbp")
}, {
"duration": 1.0,
"texture": ExtResource("70_jjb1r")
}, {
"duration": 1.0,
"texture": ExtResource("71_4gnq8")
}, {
"duration": 1.0,
"texture": ExtResource("72_si2mg")
}, {
"duration": 1.0,
"texture": ExtResource("73_yc307")
}, {
"duration": 1.0,
"texture": ExtResource("74_3doce")
}, {
"duration": 1.0,
"texture": ExtResource("75_x51j6")
}, {
"duration": 1.0,
"texture": ExtResource("76_fj453")
}, {
"duration": 1.0,
"texture": ExtResource("77_a0vrp")
}, {
"duration": 1.0,
"texture": ExtResource("78_nugdh")
}, {
"duration": 1.0,
"texture": ExtResource("79_6ftrx")
}, {
"duration": 1.0,
"texture": ExtResource("80_43xdl")
}, {
"duration": 1.0,
"texture": ExtResource("81_ehyn3")
}, {
"duration": 1.0,
"texture": ExtResource("82_jihsv")
}, {
"duration": 1.0,
"texture": ExtResource("83_tqjrx")
}, {
"duration": 1.0,
"texture": ExtResource("84_pbt5i")
}, {
"duration": 1.0,
"texture": ExtResource("85_t0rhx")
}, {
"duration": 1.0,
"texture": ExtResource("86_iji7a")
}, {
"duration": 1.0,
"texture": ExtResource("87_j2634")
}, {
"duration": 1.0,
"texture": ExtResource("88_tdffa")
}, {
"duration": 1.0,
"texture": ExtResource("89_okk11")
}, {
"duration": 1.0,
"texture": ExtResource("90_cwfet")
}, {
"duration": 1.0,
"texture": ExtResource("91_ugvuw")
}, {
"duration": 1.0,
"texture": ExtResource("92_22ru4")
}, {
"duration": 1.0,
"texture": ExtResource("93_q6p06")
}, {
"duration": 1.0,
"texture": ExtResource("94_f31l2")
}, {
"duration": 1.0,
"texture": ExtResource("95_7kulq")
}, {
"duration": 1.0,
"texture": ExtResource("96_weiei")
}, {
"duration": 1.0,
"texture": ExtResource("97_8xga3")
}, {
"duration": 1.0,
"texture": ExtResource("98_gxh24")
}, {
"duration": 1.0,
"texture": ExtResource("99_islmt")
}, {
"duration": 1.0,
"texture": ExtResource("100_avqfu")
}, {
"duration": 1.0,
"texture": ExtResource("101_tvwsq")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[node name="Interactivo" type="Node"]
script = ExtResource("1_i8l7m")

[node name="OSCClient" type="Node" parent="."]
script = ExtResource("1_p7f0e")
port = 7000

[node name="OSCMessage" type="Node" parent="OSCClient" node_paths=PackedStringArray("target_client")]
script = ExtResource("2_skh3d")
target_client = NodePath("..")
osc_address = "/llamada"

[node name="OSCServer" type="Node" parent="."]
script = ExtResource("3_nskoe")
port = 9000

[node name="OSCReceiver" type="Node" parent="OSCServer" node_paths=PackedStringArray("target_server")]
script = ExtResource("5_v4t0v")
target_server = NodePath("..")
osc_address = "/inter"

[node name="Llamada1" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 540)
sprite_frames = SubResource("SpriteFrames_ppgan")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("102_uqcgj")

[node name="NucleoActual" type="Node2D" parent="."]

[node name="Encuesta" parent="." instance=ExtResource("123_ghvbq")]
visible = false

[connection signal="instruccion_finalizada" from="OSCServer/OSCReceiver" to="." method="audio_terminado"]
[connection signal="nucleo_seleccionado" from="OSCServer/OSCReceiver" to="." method="_cambiar_nucleo"]
[connection signal="reiniciar" from="OSCServer/OSCReceiver" to="." method="_reiniciar_nucleos"]
[connection signal="volver_empezar" from="Encuesta" to="." method="_on_encuesta_volver_empezar"]
